--- a/css/nav.css
+++ b/css/nav.css
@@ -120,7 +120,7 @@ body  #nav .menu li:hover > a,
 #nav .menu .sub-menu{
   margin: 0;
   position: absolute;
-  width: 140px;
+  width: 150px;
   background-color: #333;
   z-index: 9999;
   padding: 3px 0 10px;
